--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,9 @@ ul.stream li {
   color: rgb(50, 202, 104);
   text-shadow:
     0px 0px 10px rgb(6, 75, 23),
-    0px 0px 10px rgb(6, 75, 23),
-    0px 0px 5px rgb(6, 75, 23),
-    0px 0px 5px rgb(6, 75, 23),
+    /* 0px 0px 10px rgb(6, 75, 23), */
+    /* 0px 0px 5px rgb(6, 75, 23), */
+    /* 0px 0px 5px rgb(6, 75, 23), */
     0px 0px 5px rgb(6, 75, 23);
 }
 
@@ -42,8 +42,8 @@ ul.stream li.first {
   color: rgb(168, 255, 205);
   text-shadow:
     0 0px 10px rgb(30, 110, 80),
-    0 0px 10px rgb(30, 110, 80),
-    0 0px 5px rgb(30, 110, 80),
-    0 0px 5px rgb(30, 110, 80),
+    /* 0 0px 10px rgb(30, 110, 80), */
+    /* 0 0px 5px rgb(30, 110, 80), */
+    /* 0 0px 5px rgb(30, 110, 80), */
     0 0px 5px rgb(30, 110, 80);
 }
