--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,15 @@
 * {
   margin: 0;
   padding: 0;
-
   box-sizing: border-box;
-
 }
 
 #canvas {
-  /* height: 100%;
-  width: 100%; */
-  /* image-rendering: pixelated; */
-  /* image-rendering: crisp-edges; */
-  /* image-rendering: -moz-crisp-edges; */
+  height: 100%;
+  width: 100%;
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
+  image-rendering: -moz-crisp-edges;
   background-color: #000;
+  display: block;
 }
